--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-	"name": "streamingtest",
-	"version": "0.0.1",
-	"engines": {
-		"node": ">=0.6.0"
-	},
-	"dependencies": {
-		"coffee-script": "1.2.x",
-		"express": "2.5.x",
-		"webcam-http-streaming": "^1.1.2"
-	},
-	"devDependencies": {
-		"supervisor": "0.2.x"
-	},
-	"scripts": {
-		"start": "supervisor -w server.coffee -x coffee server.coffee"
-	},
-	"config": {
-		"port": 9001
-	}
+  "name": "videochat",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3",
+    "socket.io": "^2.1.0"
+  }
 }
